testing a new update system